--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -45,7 +45,7 @@ html {
   @media (min-width: 600px) {
     display: flex;
     justify-content: center;
-    height: 100px;
+    height: 120px;
   }
 }
 
@@ -275,14 +275,19 @@ text-align: right;
   width: 1020px;
   #menu-desktop-logo {
     flex: 2;
-    background-color: #133548;
-    min-width: 100px;
-    max-width: 100px;
+    background-color: #406276;
+    min-width: 145px;
+    max-width: 145px;
     margin-right: 10px;
     margin-left: 10px;
+    padding: 5px;
     z-index: 401;
 
-  }
+    img{
+      margin-left: 10px;
+
+    }
+    }
 
   #menu-desktop-right {
     flex: 8;
@@ -294,7 +299,7 @@ text-align: right;
     }
 
     #menu-desktop-lower {
-      background-color: white;
+      background-color:transparent;
 
       flex: 1;
       max-height: 35px;
@@ -326,9 +331,8 @@ text-align: right;
         font-size: 16px;
         max-height: 26px;
         position: relative;
-
+        color: white;
         @media (max-width: 820px) {
-
           font-size: 11px;
         }
 
@@ -523,13 +527,14 @@ text-align: right;
 }
 
 .slide-titulo {
-  font-size: 150px;
+  margin-top: 24%;
+  font-size: 100px;
   font-family: 'Lato Heavy', serif;
   opacity: .4;
 }
 
 .slide-descr {
-  font-size: 50px;
+  font-size: 25px;
   font-family: 'Lato Regular', serif;
   opacity: .4;
 }
@@ -1229,19 +1234,19 @@ text-align: right;
 
 .contacto-original{
   //margin-top: 70px;
-  min-height: 90px;
+  min-height: 35px;
   max-height: 90px;
 }
 
 .contacto-titulo-container{
-  margin-top: 90px;
+  margin-top: 50px;
 }
 
 
 #contacto-titulo{
   overflow: hidden;
-  min-height: 90px;
-  max-height: 90px;
+  min-height: 40px;
+  max-height: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1472,6 +1477,12 @@ text-align: right;
 #busquedas-laborales-form,
 #ingreso-form, {
   max-width: 1000px;
+  min-width: 350px;
+  @media(max-width: 500px){
+    margin-left: 10px;
+    margin-right: 10px;
+
+  }
 
 }
 
@@ -1517,7 +1528,8 @@ text-align: right;
 .servicios-title,
 {
   width: 100% !important;
-  font-size: 70px;
+  margin-top: 20px;
+  font-size: 35px;
   font-family: "Montserrat Semibold", sans-serif;
   font-weight: 400;
   color: #17384B;
@@ -2047,9 +2059,16 @@ text-align: right;
   font-family: 'Lato Heavy', serif;
   text-align: center;
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+#contacto h2{
+  font-family: 'Lato Regular', serif;
+  text-align: center;
+  font-size: 20px;
+  color: white;
 
 }
 
