--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -411,7 +411,11 @@ text-align: right;
     #slide-01,
     #slide-02,
     #slide-03,
-    #slide-04 {
+    #slide-04,
+    #slide-05,
+    #slide-06,
+    #slide-07
+    {
       position: absolute;
       display: flex;
       justify-content: center;
