--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1241,11 +1241,12 @@ text-align: right;
   //margin-top: 70px;
   min-height: 35px;
   max-height: 35px;
-  line-height: 40px;
+  margin-bottom: 10px;
+  line-height: 50px;
 }
 
 .contacto-titulo-container{
-  margin-top: 39px;
+  margin-top: 35px;
 }
 
 
@@ -1267,26 +1268,26 @@ text-align: right;
 }
 
 @-webkit-keyframes change-enviado {
-  0%   {margin-top:45px;}
-  15%  {margin-top:45px;}
-  25%  {margin-top:-45px;}
-  40%  {margin-top:-45px;}
-  50%  {margin-top:-45px;}
-  65%  {margin-top:-45px;}
-  75%  {margin-top:-45px;}
-  85%  {margin-top:-45px;}
-  100% {margin-top:45px;}
+  0%   {margin-top:34px;}
+  15%  {margin-top:34px;}
+  25%  {margin-top:-40px;}
+  40%  {margin-top:-40px;}
+  50%  {margin-top:-40px;}
+  65%  {margin-top:-40px;}
+  75%  {margin-top:-40px;}
+  85%  {margin-top:-40px;}
+  100% {margin-top:40px;}
 }
 @keyframes change-enviado {
-  0%   {margin-top:45px;}
-  15%  {margin-top:45px;}
-  25%  {margin-top:-45px;}
-  40%  {margin-top:-45px;}
-  50%  {margin-top:-45px;}
-  65%  {margin-top:-45px;}
-  75%  {margin-top:-45px;}
-  85%  {margin-top:-45px;}
-  100% {margin-top:45px;}
+  0%   {margin-top:34px;}
+  15%  {margin-top:34px;}
+  25%  {margin-top:-40px;}
+  40%  {margin-top:-40px;}
+  50%  {margin-top:-40px;}
+  65%  {margin-top:-40px;}
+  75%  {margin-top:-40px;}
+  85%  {margin-top:-40px;}
+  100% {margin-top:40px;}
 }
 
 
@@ -1556,6 +1557,16 @@ text-align: right;
   @media (max-width: 600px) {
     font-size: 42px;
   }
+}
+
+
+.busqueda-laboral-fecha{
+  font-size: 12px;
+  color: white;
+  margin-left: 20px;
+  font-weight: bolder;
+
+
 }
 
 .administracion-input,
@@ -1895,8 +1906,8 @@ text-align: right;
     padding: 15px;
     color: white;
     text-align: left;
-    font-size: 38px;
-    line-height: 32px;
+    font-size: 25px;
+    line-height: 30px;
   }
 
   .noticias-comentario {
@@ -2010,8 +2021,11 @@ text-align: right;
     }
     .busqueda-laboral-texto {
       padding: 5px;
+      margin-left: 15px;
       font-family: 'Lato Regular', serif;
       font-size: 16px;
+      margin-top: 15px;
+      line-height: 18px;
     }
     .busqueda-laboral-contacto {
       padding: 5px;
@@ -2069,16 +2083,17 @@ text-align: right;
   font-family: 'Lato Heavy', serif;
   text-align: center;
   color: white;
-  font-size: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 #contacto h2{
   font-family: 'Lato Regular', serif;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   color: white;
+  margin-bottom: 5px;
 
 }
 
@@ -2215,6 +2230,26 @@ text-align: right;
   margin-bottom: 10px;
 
 }
+
+.acdesarrollos {
+  position: relative;
+  text-align: left;
+  width: 100px;
+  margin-left: 5px;
+  font-family: 'Lato Regular', serif;
+  font-size: 14px;
+  color: black;
+
+  a{
+    font-family: 'Montserrat Light', serif;
+    font-weight: bolder;
+    font-size: 12px;
+    cursor: pointer;
+  }
+
+}
+
+
 
 .administracion-slider .administracion-input {
   padding-top: 0px !important;
