--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -69,6 +69,11 @@ html {
 
 select option { color: black; }
 
+select{
+  color: white;
+
+}
+
 .nav-button-transformed {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -399,6 +404,10 @@ text-align: right;
   z-index: 0;
   background-color: black;
   overflow: hidden;
+  @media(max-width: 400px){
+    top: 50px;
+
+  }
 
   #slider-main {
     width: 100%;
@@ -529,12 +538,17 @@ text-align: right;
 }
 
 .slide-titulo {
-  margin-top: 24%;
+  margin-top: 450px;
   font-size: 100px;
   font-family: 'Lato Heavy', serif;
   border-color: black;
   text-shadow: 2px 2px black;
   opacity: .7;
+
+  @media(max-width: 450px){
+    font-size: 70px;
+
+  }
 }
 
 .slide-descr {
@@ -542,6 +556,10 @@ text-align: right;
   font-family: 'Lato Regular', serif;
   text-shadow: 2px 2px black;
   opacity: .7;
+  @media(max-width: 400px){
+    font-size: 14px;
+
+  }
 }
 
 #servicios {
@@ -1818,14 +1836,14 @@ text-align: right;
   }
   #noticias-panel-detalle {
     font-family: 'Montserrat Light', serif;
-    width: 95%;
+    width: 100%;
     margin-bottom: 10px;
     text-align: justify;
     max-height: 400px;
-    min-height: 400px;
-    overflow: visible;
+    min-height: 200px;
+    overflow: scroll;
     font-size: 12px;
-    line-height: 15px;
+    line-height: 17px;
     color: #FFFFFF;
 
   }
@@ -1864,6 +1882,8 @@ text-align: right;
     position: relative;
     margin-top: -45px;
     margin-bottom: 20px;
+
+
     #noticias-nuevo-btn {
       width: 110px;
       cursor: pointer;
@@ -1880,6 +1900,16 @@ text-align: right;
 
     }
   }
+}
+
+#noticias-nuevo-btn:hover{
+  background-color: #133548;
+  color: #133548;
+  border: 1px solid white;
+  text-shadow: 1px 1px black;
+
+
+
 }
 
 #noticias-comentarios {
@@ -1901,13 +1931,19 @@ text-align: right;
   #noticias-comentarios-title {
     width: 90%;
     font-family: 'Lato Heavy', serif;
-    margin-bottom: 20px;
-    margin-top: 25px;
-    padding: 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 10px;
     color: white;
     text-align: left;
-    font-size: 25px;
+    font-size: 28px;
     line-height: 30px;
+
+    @media(max-width: 400px){
+      font-size: 32px;
+      line-height: 34px;
+
+    }
   }
 
   .noticias-comentario {
@@ -1917,13 +1953,15 @@ text-align: right;
 
     .noticia-comentario-user {
 
-      line-height: 24px;
-      font-size: 23px;
+      line-height: 20px;
+      font-size: 18px;
+      font-weight: bold;
     }
     .noticia-comentario-detalle {
-      line-height: 20px;
-      font-size: 17px;
-      margin-bottom: 15px;
+      line-height: 17px;
+      font-size: 15px;
+      color: lightgrey;
+      margin-bottom: 10px;
       font-family: 'Montserrat Light', serif;
 
     }
@@ -1932,15 +1970,15 @@ text-align: right;
 }
 
 .noticias-comentario button{
-  width: 120px;
+  width: 80px;
   font-family: 'Lato Heavy', serif;
   color: white;
   background-color: #3f6175;
   font-size: 12px;
   border: 1px solid white;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
   white-space: nowrap;
   text-align: center;
   cursor: hand;
@@ -1948,10 +1986,11 @@ text-align: right;
   margin-top: 10px;
   margin-bottom: 10px;
   text-decoration: none;
+}
+
   .noticias-comentario button:hover{
     background-color: #17384B;
 
-  }
 }
 
 /*BUSQUEDAS LABORALES*/
@@ -2232,22 +2271,35 @@ text-align: right;
 }
 
 .acdesarrollos {
-  position: relative;
   text-align: left;
   width: 100px;
   margin-left: 5px;
   font-family: 'Lato Regular', serif;
-  font-size: 14px;
-  color: black;
+  font-size: 15px;
+  color: darkorange;
 
   a{
     font-family: 'Montserrat Light', serif;
     font-weight: bolder;
     font-size: 12px;
     cursor: pointer;
-  }
+    width: 100px;
+    color: white;
+
+      }
 
 }
+
+.acdesarrollos a:hover{
+  color: #2f96b4;
+}
+
+.contenedor_ac{
+//que pongo acaaaaa//
+background-color: black;
+  padding: 10px;
+}
+
 
 
 
