--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -13,6 +13,10 @@
   box-shadow: 5px 5px 10px black;
 }
 
+body, html, .view-container {
+
+}
+
 body {
   font-family: 'Lato Regular', serif;
   overflow-x: hidden;
@@ -42,7 +46,7 @@ html {
   -ms-transform: translate3d(0, 0, 0);
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  @media (min-width: 600px) {
+  @media (min-width: 800px) {
     display: flex;
     justify-content: center;
     height: 120px;
@@ -67,9 +71,11 @@ html {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-select option { color: black; }
+select option {
+  color: black;
+}
 
-select{
+select {
   color: white;
 
 }
@@ -84,7 +90,6 @@ select{
 
 .nav-button {
   flex: 1;
-
 
   margin-top: 15px;
   margin-left: 15px;
@@ -157,12 +162,12 @@ select{
     flex: 5;
     padding: 5px;
     margin-right: 15px;
-text-align: right;
+    text-align: right;
     //background-color: green;
   }
 }
 
-.bienvenidos{
+.bienvenidos {
   color: white;
   margin-left: 30px;
   margin-top: 15px;
@@ -196,7 +201,7 @@ text-align: right;
   -o-transform: translate(-1000px, 0);
   transform: translate(-1000px, 0);
 
-  @media (min-width: 600px) {
+  @media (min-width: 800px) {
     visibility: collapse;
     display: none;
   }
@@ -258,14 +263,14 @@ text-align: right;
 }
 
 .menu-type-desktop {
-  @media (max-width: 599px) {
+  @media (max-width: 799px) {
     visibility: collapse;
     display: none;
   }
 }
 
 .menu-type-mobile {
-  @media (min-width: 600px) {
+  @media (min-width: 800px) {
     visibility: collapse;
     display: none;
   }
@@ -288,11 +293,11 @@ text-align: right;
     padding: 5px;
     z-index: 401;
 
-    img{
+    img {
       margin-left: 10px;
 
     }
-    }
+  }
 
   #menu-desktop-right {
     flex: 8;
@@ -304,7 +309,7 @@ text-align: right;
     }
 
     #menu-desktop-lower {
-      background-color:transparent;
+      background-color: transparent;
 
       flex: 1;
       max-height: 35px;
@@ -337,7 +342,7 @@ text-align: right;
         max-height: 26px;
         position: relative;
         color: white;
-        @media (max-width: 820px) {
+        @media (max-width: 1000px) {
           font-size: 11px;
         }
 
@@ -404,7 +409,7 @@ text-align: right;
   z-index: 0;
   background-color: black;
   overflow: hidden;
-  @media(max-width: 400px){
+  @media(max-width: 800px) {
     top: 50px;
 
   }
@@ -423,8 +428,7 @@ text-align: right;
     #slide-04,
     #slide-05,
     #slide-06,
-    #slide-07
-    {
+    #slide-07 {
       position: absolute;
       display: flex;
       justify-content: center;
@@ -545,7 +549,7 @@ text-align: right;
   text-shadow: 2px 2px black;
   opacity: .7;
 
-  @media(max-width: 450px){
+  @media(max-width: 450px) {
     font-size: 70px;
 
   }
@@ -556,7 +560,7 @@ text-align: right;
   font-family: 'Lato Regular', serif;
   text-shadow: 2px 2px black;
   opacity: .7;
-  @media(max-width: 400px){
+  @media(max-width: 400px) {
     font-size: 14px;
 
   }
@@ -568,7 +572,7 @@ text-align: right;
   display: flex;
   flex-direction: column;
   @media (max-width: 800px) {
-    margin-top: 600px;
+    margin-top: 649px;
 
   }
   //  justify-content: center;
@@ -586,13 +590,14 @@ text-align: right;
     align-items: center;
     width: 100%;
 
-    @media (min-width: 800px) {
+    @media (min-width: 1000px) {
 
       -webkit-flex-direction: row; /* works with row or column */
       flex-direction: row;
 
       -webkit-justify-content: center;
       justify-content: center;
+      width: 95%;
     }
 
     //    justify-content: center;
@@ -682,10 +687,10 @@ text-align: right;
         background-color: #133548;
         height: 3px;
         min-width: 2px;
-        width: 250px;
+        width: 220px;
         margin-right: 5px;
 
-        @media (min-width: 800px) {
+        @media (min-width: 1000px) {
 
           height: 200px;
           width: 2px;
@@ -736,7 +741,7 @@ text-align: right;
 
 }
 
-.noticia p{
+.noticia p {
   text-align: justify;
 }
 
@@ -890,8 +895,8 @@ text-align: right;
     }
 
     .prev-m:hover,
-    .sig-m:hover{
-        color: #17384B;
+    .sig-m:hover {
+      color: #17384B;
       cursor: pointer;
     }
 
@@ -981,12 +986,12 @@ text-align: right;
       }
     }
 
-    .agenda_imagen_contenedor{
+    .agenda_imagen_contenedor {
       margin-right: 10px;
       margin-left: 10px;
       width: 300px;
       min-height: 150px;
-      }
+    }
 
     img {
       min-height: 100%;
@@ -1249,21 +1254,19 @@ text-align: right;
   }
 }
 
-
-#contacto-map{
+#contacto-map {
   height: 300px;
   background-color: gray;
   width: 100%;
 }
 
-
-.contacto-mensaje-enviado{
+.contacto-mensaje-enviado {
   //margin-top: 20px;
   min-height: 35px;
   max-height: 35px;
 }
 
-.contacto-original{
+.contacto-original {
   //margin-top: 70px;
   min-height: 35px;
   max-height: 35px;
@@ -1271,12 +1274,11 @@ text-align: right;
   line-height: 50px;
 }
 
-.contacto-titulo-container{
+.contacto-titulo-container {
   margin-top: 35px;
 }
 
-
-#contacto-titulo{
+#contacto-titulo {
   overflow: hidden;
   min-height: 45px;
   max-height: 45px;
@@ -1286,7 +1288,7 @@ text-align: right;
 
 }
 
-.contacto-enviado{
+.contacto-enviado {
   animation: change-enviado 3s linear 0s normal none infinite;
   -webkit-animation: change-enviado 3s linear 0s normal none infinite;
   -moz-animation: change-enviado 3s linear 0s normal none infinite;
@@ -1294,30 +1296,64 @@ text-align: right;
 }
 
 @-webkit-keyframes change-enviado {
-  0%   {margin-top:34px;}
-  15%  {margin-top:34px;}
-  25%  {margin-top:-40px;}
-  40%  {margin-top:-40px;}
-  50%  {margin-top:-40px;}
-  65%  {margin-top:-40px;}
-  75%  {margin-top:-40px;}
-  85%  {margin-top:-40px;}
-  100% {margin-top:40px;}
+  0% {
+    margin-top: 34px;
+  }
+  15% {
+    margin-top: 34px;
+  }
+  25% {
+    margin-top: -40px;
+  }
+  40% {
+    margin-top: -40px;
+  }
+  50% {
+    margin-top: -40px;
+  }
+  65% {
+    margin-top: -40px;
+  }
+  75% {
+    margin-top: -40px;
+  }
+  85% {
+    margin-top: -40px;
+  }
+  100% {
+    margin-top: 40px;
+  }
 }
+
 @keyframes change-enviado {
-  0%   {margin-top:34px;}
-  15%  {margin-top:34px;}
-  25%  {margin-top:-40px;}
-  40%  {margin-top:-40px;}
-  50%  {margin-top:-40px;}
-  65%  {margin-top:-40px;}
-  75%  {margin-top:-40px;}
-  85%  {margin-top:-40px;}
-  100% {margin-top:40px;}
+  0% {
+    margin-top: 34px;
+  }
+  15% {
+    margin-top: 34px;
+  }
+  25% {
+    margin-top: -40px;
+  }
+  40% {
+    margin-top: -40px;
+  }
+  50% {
+    margin-top: -40px;
+  }
+  65% {
+    margin-top: -40px;
+  }
+  75% {
+    margin-top: -40px;
+  }
+  85% {
+    margin-top: -40px;
+  }
+  100% {
+    margin-top: 40px;
+  }
 }
-
-
-
 
 #administracion {
   table {
@@ -1333,13 +1369,11 @@ text-align: right;
     border-radius: 10px;
     background-color: #2f96b4;
 
-
-
     max-height: 300px;
     overflow: auto;
     display: block;
 
-    tbody{
+    tbody {
       min-width: 100%;
       display: table;
     }
@@ -1368,7 +1402,6 @@ text-align: right;
       color: white;
     }
 
-
     //:last-child:hover,
     //.tr-selected:last-child{
     //  border-bottom-right-radius: 10px;
@@ -1394,7 +1427,7 @@ text-align: right;
   div {
     margin: 5px;
   }
-  a{
+  a {
     margin-top: 4px;
   }
 
@@ -1405,7 +1438,7 @@ text-align: right;
   margin-bottom: 10px;
   margin-top: 10px;
   text-align: center;
-  @media(max-width: 500px){
+  @media(max-width: 500px) {
     margin: 20px;
 
   }
@@ -1419,7 +1452,7 @@ text-align: right;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     margin-top: 50px;
   }
 }
@@ -1427,7 +1460,8 @@ text-align: right;
 #administracion,
 #noticias,
 #servicios-inner,
-#revistas {
+#revistas,
+#institucional {
 
   display: flex;
   align-items: center;
@@ -1435,7 +1469,7 @@ text-align: right;
   flex-direction: column;
   max-width: 100%;
   margin-top: 120px;
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     margin-top: 50px;
 
   }
@@ -1472,7 +1506,7 @@ text-align: right;
   color: black;
   font-size: 16px;
   line-height: 22px;
-  @media(max-width: 500px){
+  @media(max-width: 500px) {
     padding: 20px;
     text-align: justify;
 
@@ -1512,10 +1546,12 @@ text-align: right;
 #nuevo-usuario-form,
 #revistas-form,
 #busquedas-laborales-form,
-#ingreso-form, {
+#ingreso-form,
+#institucional-main-container,
+{
   max-width: 1000px;
   min-width: 350px;
-  @media(max-width: 500px){
+  @media(max-width: 500px) {
     margin-left: 10px;
     margin-right: 10px;
 
@@ -1563,6 +1599,7 @@ text-align: right;
 .revistas-title,
 .contacto-title,
 .servicios-title,
+.institucional-title,
 {
   width: 100% !important;
   //margin-top: 20px;
@@ -1585,13 +1622,11 @@ text-align: right;
   }
 }
 
-
-.busqueda-laboral-fecha{
+.busqueda-laboral-fecha {
   font-size: 12px;
   color: white;
   margin-left: 20px;
   font-weight: bolder;
-
 
 }
 
@@ -1891,7 +1926,6 @@ text-align: right;
     margin-top: -45px;
     margin-bottom: 20px;
 
-
     #noticias-nuevo-btn {
       width: 110px;
       cursor: pointer;
@@ -1910,13 +1944,11 @@ text-align: right;
   }
 }
 
-#noticias-nuevo-btn:hover{
+#noticias-nuevo-btn:hover {
   background-color: #133548;
   color: #133548;
   border: 1px solid white;
   text-shadow: 1px 1px black;
-
-
 
 }
 
@@ -1924,14 +1956,13 @@ text-align: right;
   background-color: #3f6175;
   color: white;
 
-
   #noticias-comentarios-list {
 
     max-width: 90%;
     display: flex;
     flex-direction: column;
     align-items: left;
-    @media (max-width: 500px){
+    @media (max-width: 500px) {
       align-items: center;
 
     }
@@ -1947,7 +1978,7 @@ text-align: right;
     font-size: 28px;
     line-height: 30px;
 
-    @media(max-width: 400px){
+    @media(max-width: 400px) {
       font-size: 32px;
       line-height: 34px;
 
@@ -1977,7 +2008,7 @@ text-align: right;
 
 }
 
-.noticias-comentario button{
+.noticias-comentario button {
   width: 80px;
   font-family: 'Lato Heavy', serif;
   color: white;
@@ -1996,8 +2027,8 @@ text-align: right;
   text-decoration: none;
 }
 
-  .noticias-comentario button:hover{
-    background-color: #17384B;
+.noticias-comentario button:hover {
+  background-color: #17384B;
 
 }
 
@@ -2026,7 +2057,7 @@ text-align: right;
 
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     margin-top: 50px;
   }
 
@@ -2058,6 +2089,11 @@ text-align: right;
 
     margin-top: 10px;
     margin-bottom: 10px;
+
+    @media (max-width: 1000px) {
+      margin-left: 20px;
+      margin-right: 20px;
+    }
 
     .busqueda-laboral-title {
 
@@ -2135,7 +2171,7 @@ text-align: right;
   margin-bottom: 10px;
 }
 
-#contacto h2{
+#contacto h2 {
   font-family: 'Lato Regular', serif;
   text-align: center;
   font-size: 16px;
@@ -2157,7 +2193,7 @@ text-align: right;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
-  @media(max-width: 500px){
+  @media(max-width: 500px) {
     font-size: 20px;
 
   }
@@ -2285,7 +2321,7 @@ text-align: right;
   font-size: 15px;
   color: darkorange;
 
-  a{
+  a {
     font-family: 'Montserrat Light', serif;
     font-weight: bolder;
     font-size: 12px;
@@ -2293,24 +2329,21 @@ text-align: right;
     width: 100px;
     color: white;
 
-      }
+  }
 
 }
 
-.acdesarrollos a:hover{
+.acdesarrollos a:hover {
   color: #2f96b4;
 }
 
-.contenedor_ac{
-//que pongo acaaaaa//
-background-color: black;
+.contenedor_ac {
+  //que pongo acaaaaa//
+  background-color: black;
   padding: 10px;
   display: flex;
   justify-content: center;
 }
-
-
-
 
 .administracion-slider .administracion-input {
   padding-top: 0px !important;
@@ -2336,12 +2369,9 @@ background-color: black;
   font-size: 16px;
   box-shadow: 0px 0px 10px -3px black;
 
-
-
   -webkit-animation: show-error 0.4s;
   -o-animation: show-error 0.4s;
   animation: show-error 0.4s;
-
 
 }
 
@@ -2351,6 +2381,112 @@ background-color: black;
   }
   100% {
     opacity: 1;
+  }
+}
+
+/*INSTITUCIONAL*/
+#institucional-main-container {
+
+  position: relative;
+  #institucional-inner-container {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    min-width: 100% !important;
+    max-width: 100% !important;
+    #institucional-main-primero,
+    #institucional-main-segundo,
+    #institucional-main-tercero, {
+      width: 1000px;
+      max-width: 100%;
+      min-width: 100%;
+      height: 100%;
+      min-height: 600px;
+      @media (max-width: 1000px) {
+        width: 100%;
+      }
+
+    }
+    #institucional-main-primero, {
+      background-color: orange;
+    }
+
+    #institucional-main-segundo, {
+      background-color: blue;
+
+    }
+
+    #institucional-main-tercero, {
+
+      background-color: green;
+    }
+  }
+
+  #institucional-back,
+  #institucional-forw, {
+
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 80px;
+    width: 30px;
+    position: absolute;
+    top: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    span {
+      color: white;
+      font-size: 50px;
+      font-weight: bold;
+    }
+  }
+
+  #institucional-back {
+    left: 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+  }
+  #institucional-forw {
+    right: 0px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  .seccion-primera-selected {
+    margin-left: 0%;
+    opacity: 1;
+    -webkit-transition: all 1s ;
+    -moz-transition: all 1s ;
+    -ms-transition: all 1s ;
+    -o-transition: all 1s ;
+    transition: all 1s ;
+  }
+  .seccion-segunda-selected {
+    margin-left: -100%;
+    opacity: 1;
+    -webkit-transition: all 1s ;
+    -moz-transition: all 1s ;
+    -ms-transition: all 1s ;
+    -o-transition: all 1s ;
+    transition: all 1s ;
+
+  }
+
+  .seccion-tercera-selected {
+    margin-left: -200%;
+    opacity: 1;
+    -webkit-transition: all 1s ;
+    -moz-transition: all 1s ;
+    -ms-transition: all 1s ;
+    -o-transition: all 1s ;
+    transition: all 1s ;
+
+  }
+
+  .seccion-deselected{
+    opacity: 0;
+    //margin-left: -300%;
   }
 }
 
