--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2388,10 +2388,16 @@ select {
 #institucional-main-container {
 
   position: relative;
+
+  @media (max-width: 800px) {
+    max-width: 100% !important;
+  }
   #institucional-inner-container {
     display: flex;
     flex-direction: row;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 800px;
     min-width: 100% !important;
     max-width: 100% !important;
     #institucional-main-primero,
@@ -2619,16 +2625,68 @@ select {
         margin-top: -25px;
         background-color: #999999;
       }
-      h1{
+      h1 {
         font-weight: bold;
       }
 
-      p{
+      p {
         font-size: 16px;
         margin: 5px;
         text-align: center;
       }
     }
 
+  }
+}
+
+/***** ACORDEON *****/
+
+.acordeon-list {
+  .acordeon-line {
+    width: 100%;
+    color: white;
+    .acordeon-title-check {
+      display: none;
+    }
+
+    .acordeon-title-label {
+      background-color: #17384B;
+      width: 100%;
+      display: block;
+    }
+
+    .acordeon-title-check ~ p {
+      background-color: #999999;
+      -webkit-transform: scale(1, 0);
+      -moz-transform: scale(1, 0);
+      -ms-transform: scale(1, 0);
+      -o-transform: scale(1, 0);
+      transform: scale(1, 0);
+
+      -webkit-transform-origin: 0% 0%;
+      -moz-transform-origin:  0% 0%;
+      -ms-transform-origin:  0% 0%;
+      -o-transform-origin:  0% 0%;
+      transform-origin:  0% 0%;
+      
+      
+      -webkit-transition: all 1s;
+      -moz-transition: all 1s;
+      -ms-transition: all 1s;
+      -o-transition: all 1s;
+      transition: all 1s;
+    }
+
+    .acordeon-title-check:checked ~ p {
+      background-color: blue;
+      -webkit-transform: scale(1, 1);
+      -moz-transform: scale(1, 1);
+      -ms-transform: scale(1, 1);
+      -o-transform: scale(1, 1);
+      transform: scale(1, 1);
+    }
+
+    .acordeon-text {
+    }
   }
 }
