--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2656,34 +2656,19 @@ select {
     }
 
     .acordeon-title-check ~ p {
-      background-color: #999999;
-      -webkit-transform: scale(1, 0);
-      -moz-transform: scale(1, 0);
-      -ms-transform: scale(1, 0);
-      -o-transform: scale(1, 0);
-      transform: scale(1, 0);
-
-      -webkit-transform-origin: 0% 0%;
-      -moz-transform-origin:  0% 0%;
-      -ms-transform-origin:  0% 0%;
-      -o-transform-origin:  0% 0%;
-      transform-origin:  0% 0%;
-      
-      
-      -webkit-transition: all 0.4s;
-      -moz-transition: all 0.4s;
-      -ms-transition: all 0.4s;
-      -o-transition: all 0.4s;
-      transition: all 0.4s;
+      background-color: blue;
+      overflow: auto;
+      max-height: 0px;
+      -webkit-transition: max-height 0.4s;
+      -moz-transition: max-height 0.4s;
+      -ms-transition: max-height 0.4s;
+      -o-transition: max-height 0.4s;
+      transition: max-height 0.4s;
     }
 
     .acordeon-title-check:checked ~ p {
-      background-color: blue;
-      -webkit-transform: scale(1, 1);
-      -moz-transform: scale(1, 1);
-      -ms-transform: scale(1, 1);
-      -o-transform: scale(1, 1);
-      transform: scale(1, 1);
+
+      max-height: 500px;
     }
 
     .acordeon-text {
