--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -2807,29 +2807,16 @@ select {
 }
 /* line 2658, ../sass/screen.scss */
 .acordeon-list .acordeon-line .acordeon-title-check ~ p {
-  background-color: #999999;
-  -webkit-transform: scale(1, 0);
-  -moz-transform: scale(1, 0);
-  -ms-transform: scale(1, 0);
-  -o-transform: scale(1, 0);
-  transform: scale(1, 0);
-  -webkit-transform-origin: 0% 0%;
-  -moz-transform-origin: 0% 0%;
-  -ms-transform-origin: 0% 0%;
-  -o-transform-origin: 0% 0%;
-  transform-origin: 0% 0%;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s;
-}
-/* line 2680, ../sass/screen.scss */
-.acordeon-list .acordeon-line .acordeon-title-check:checked ~ p {
   background-color: blue;
-  -webkit-transform: scale(1, 1);
-  -moz-transform: scale(1, 1);
-  -ms-transform: scale(1, 1);
-  -o-transform: scale(1, 1);
-  transform: scale(1, 1);
+  overflow: auto;
+  max-height: 0px;
+  -webkit-transition: max-height 0.4s;
+  -moz-transition: max-height 0.4s;
+  -ms-transition: max-height 0.4s;
+  -o-transition: max-height 0.4s;
+  transition: max-height 0.4s;
+}
+/* line 2669, ../sass/screen.scss */
+.acordeon-list .acordeon-line .acordeon-title-check:checked ~ p {
+  max-height: 500px;
 }
