--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -35,6 +35,7 @@ html {
 }
 
 .header {
+  max-width: 100%;
   width: 100%;
   height: 50px;
   background-color: #17384A;
@@ -265,14 +266,14 @@ select {
 .menu-type-desktop {
   @media (max-width: 799px) {
     visibility: collapse;
-    display: none;
+    display: none !important;
   }
 }
 
 .menu-type-mobile {
   @media (min-width: 800px) {
     visibility: collapse;
-    display: none;
+    display: none !important;
   }
 }
 
@@ -1219,7 +1220,7 @@ select {
       min-width: 80%;
       @media(min-width: 800px) {
         max-width: 350px;
-        min-width: 350px;
+        min-width: 320px;
       }
       input[type=text],
       textarea {
@@ -1542,7 +1543,6 @@ select {
 
 #administracion-form,
 #servicios-main-container,
-#noticias-form,
 #nuevo-usuario-form,
 #revistas-form,
 #busquedas-laborales-form,
@@ -1550,13 +1550,28 @@ select {
 #institucional-main-container,
 {
   max-width: 1000px;
-  min-width: 350px;
+  min-width: 320px;
   @media(max-width: 500px) {
-    margin-left: 10px;
-    margin-right: 10px;
+    //margin-left: 10px;
+    //margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    max-width: 100%;
 
   }
 
+}
+
+
+#noticias-form{
+  max-width: 1000px;
+  min-width: 320px;
+  @media(max-width: 500px) {
+    margin-left: 10px;
+    margin-right: 10px;
+    max-width: 100%;
+
+  }
 }
 
 #revistas-form {
@@ -1829,7 +1844,7 @@ select {
     overflow: hidden;
     margin-top: 10px;
     min-height: 200px;
-    min-width: 350px;
+    min-width: 320px;
     img {
       margin-left: 15px;
       border-radius: 5px;
@@ -2396,7 +2411,7 @@ select {
     display: flex;
     flex-direction: row;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     max-height: 800px;
     min-width: 100% !important;
     max-width: 100% !important;
@@ -2602,7 +2617,8 @@ select {
 .intitucional-organigrama-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  max-height: 600px;
+  overflow-y: auto;
   .organigrama-line {
     margin: 20px;
     display: flex;
