--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -81,15 +81,19 @@ html {
   border-radius: 4px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+select{
+  color: white;
+  background-color: white;
+}
 
 select option {
-  color: black;
-}
-
-select {
   color: white;
-
+  background-color: black;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
+
 
 .nav-button-transformed {
   -webkit-transform: rotate(180deg);
@@ -296,7 +300,8 @@ select {
   width: 1020px;
   #menu-desktop-logo {
     flex: 2;
-    background-color: #406276;
+    //background-color: #406276;
+    background-color: transparent;
     min-width: 145px;
     max-width: 145px;
     margin-right: 10px;
@@ -557,7 +562,7 @@ select {
 }
 
 .slide-titulo {
-  margin-top: 450px;
+  margin-top: 250px;
   font-size: 100px;
   font-family: 'Lato Heavy', serif;
   border-color: black;
@@ -1015,7 +1020,8 @@ select {
       margin-right: 10px;
       margin-left: 10px;
       width: 300px;
-      min-height: 150px;
+      max-height: 300px;
+      height: 300px;
     }
 
     img {
@@ -1455,7 +1461,15 @@ select {
   }
   a {
     margin-top: 4px;
+
   }
+
+
+
+}
+
+#footer div:hover{
+  color:white;
 
 }
 
@@ -2228,6 +2242,7 @@ select {
   font-size: 16px;
   color: white;
   margin-bottom: 5px;
+  line-height: 22px;
 
 }
 
@@ -2448,8 +2463,8 @@ select {
     flex-direction: row;
     overflow-x: hidden;
     overflow-y: hidden;
-    min-height: 600px;
-    //max-height: 800px;
+    min-height: 850px;
+    max-height: 1200px;
     min-width: 100% !important;
     max-width: 100% !important;
     #institucional-main-primero,
@@ -2458,9 +2473,7 @@ select {
       color: #133548;
       wwidth: 1000px;
       max-width: 100%;
-      min-width: 100%;
-      height: 100%;
-      min-height: 800px;
+      min-height: 500px;
       overflow-y: auto;
       padding-bottom: 20px;
       @media (max-width: 1000px) {
@@ -2470,7 +2483,6 @@ select {
     }
     #institucional-main-primero, {
       margin-left: 0%;
-      margin-top: 10px;
       z-index: 300;
       padding-left: 10%;
       padding-right: 10%;
@@ -2487,7 +2499,7 @@ select {
 
       p{
         color: black;
-        font-family: 'Lato', serif;
+        font-family: 'Lato Regular', serif;
         font-size: 17px;
         line-height: 23px;
       }
@@ -2509,7 +2521,7 @@ select {
           li {
             list-style-type: disc;
             color: black;
-            font-family: 'Lato', serif;
+            font-family: 'Lato Regular', serif;
             font-size: 17px;
             line-height: 23px;
           }
@@ -2549,20 +2561,48 @@ select {
     }
   }
 
+  @keyframes flickerAnimation {
+    0%   { opacity:1; }
+    50%  { opacity:.5; }
+    100% { opacity:1; }
+  }
+  @-o-keyframes flickerAnimation{
+    0%   { opacity:1; }
+    50%  { opacity:.5; }
+    100% { opacity:1; }
+  }
+  @-moz-keyframes flickerAnimation{
+    0%   { opacity:1; }
+    50%  { opacity:.5; }
+    100% { opacity:1; }
+  }
+  @-webkit-keyframes flickerAnimation{
+    0%   { opacity:1; }
+    50%  { opacity:.5; }
+    100% { opacity:1; }
+  }
+
   #institucional-back,
   #institucional-forw, {
 
-    background-color: lightgrey;
-    opacity: .4;
+    background-color: #133548;
+    -webkit-box-shadow: 2px 3px 4px 1px rgba(0,0,0,0.26);
+    -moz-box-shadow: 2px 3px 4px 1px rgba(0,0,0,0.26);
+    box-shadow: 2px 3px 4px 1px rgba(0,0,0,0.26);
+    //opacity: .4;
     height: 60px;
     width: 30px;
     position: absolute;
-    top: 5%;
+    top: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     z-index: 800;
+    -webkit-animation: flickerAnimation 4s infinite;
+    -moz-animation: flickerAnimation 4s infinite;
+    -o-animation: flickerAnimation 4s infinite;
+    animation: flickerAnimation 4s infinite;
 
     span {
       color: white;
@@ -2573,14 +2613,14 @@ select {
 
   #institucional-back {
     left: 0px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 
   }
   #institucional-forw {
     right: 0px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
 
@@ -2657,42 +2697,42 @@ select {
   font-family: 'Montserrat Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Montserrat Regular'), url('Montserrat-Regular.otf') format('woff');
+  src: local('Montserrat Regular'), url('Montserrat-Regular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Lato Heavy';
   font-style: normal;
   font-weight: normal;
-  src: local('Lato Heavy'), url('Lato-Heavy.ttf') format('woff');
+  src: local('Lato Heavy'), url('Lato-Heavy.eot') format('eot');
 }
 
 @font-face {
   font-family: 'Lato Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Lato Light'), url('Lato-Light.ttf') format('woff');
+  src: local('Lato Light'), url('Lato-Light.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Montserrat Light'), url('Montserrat-Light.otf') format('woff');
+  src: local('Montserrat Light'), url('Montserrat-Light.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat Semibold';
   font-style: normal;
   font-weight: normal;
-  src: local('Montserrat Semibold'), url('Montserrat-SemiBold.otf') format('woff');
+  src: local('Montserrat Semibold'), url('Montserrat-SemiBold.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Lato Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Lato Black'), url('Lato-Black.ttf') format('woff');
+  src: local('Lato Black'), url('Lato-Black.woff') format('woff');
 }
 
 //**** ORGANIZATION CHART ****////
